# library-manager

./: LICENSE  README.md  setup_project.ps1
app/: .gitignore  CMakeLists.txt  Makefile  library-manager.cbp  library-manager.layout  test_loan  test_user
app/data/: books.txt  loans.txt  users.txt
app/src/: main.cpp
app/src/models/: Book.cpp  Book.h  Borrow.cpp  Borrow.h  User.cpp  User.h
app/src/repository/: BorrowRepository.h
app/src/services/: BookManager.cpp  BookManager.h  BorrowManager.cpp  BorrowManager.h  Library.cpp  Library.h  LoanManager.cpp  LoanManager.h  UserManager.cpp  UserManager.h
app/src/utils/: Backup.cpp  Backup.h  IdGenerator.cpp  IdGenerator.h
app/tests/: reset_data.sh  test_book.cpp  test_library.cpp  test_loan.cpp  test_user.cpp  test_user_registration.cpp
